Fix minor site design issues
- Cap the maximum size of hosted images
- Remove default margin from images & figures
- Reduce vertical whitespace on blockquotes
- Change main element ID

--- a/css/reset.css
+++ b/css/reset.css
@@ -32,8 +32,9 @@ ul[class], ol[class] {
   padding: 0;
 }
 
-img, picture {
+figure, img, picture {
   display: block;
+  margin: 0;
   max-width: 100%;
 }
 
